# opqr-python

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  README.rst  opqr-python.cpp  setup.py  stub.cpp
opqr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
